--- a/index.html
+++ b/index.html
@@ -58,7 +58,6 @@
 
     </div>
   </div>
-  <script src="service-worker.js"></script>
   <div class="espacio">
 
   </div>
@@ -68,7 +67,7 @@
       <button id="btnAdd">Instalar</button>
     </div>
   </footer>
-  <script src="api.js"></script>
+  <!-- <script src="api.js"></script> -->
   <script>
     // Check that service workers are supported
     if ('serviceWorker' in navigator) {
