--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     </div>
   </footer>
   <!-- <script src="api.js"></script> -->
-  <script>
+  <!-- <script>
     // Check that service workers are supported
     if ('serviceWorker' in navigator) {
       // Use the window load event to keep the page load performant
@@ -75,7 +75,7 @@
         navigator.serviceWorker.register('service-worker.js');
       });
     }
-  </script>
+  </script> -->
   <script>
     let deferredPrompt;
     window.addEventListener('beforeinstallprompt', function (e) {
