--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <button id="btnAdd">Instalar</button>
     </div>
   </footer>
-  <!-- <script src="api.js"></script> -->
+  <script src="api.js"></script>
   <script>
     // Check that service workers are supported
     if ('serviceWorker' in navigator) {
