--- a/index.html
+++ b/index.html
@@ -23,6 +23,15 @@
   <link rel="icon" type="image/png" sizes="96x96" href="icon/favicon-96x96.png">
   <link rel="icon" type="image/png" sizes="16x16" href="icon/favicon-16x16.png">
   <link rel="manifest" href="manifest.webmanifest">
+  <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
+  <script>
+    window.OneSignal = window.OneSignal || [];
+    OneSignal.push(function () {
+      OneSignal.init({
+        appId: "921bc480-b45c-4532-b6b9-46592db29a36",
+      });
+    });
+  </script>
 </head>
 
 <body>
