--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <link rel="icon" type="image/png" sizes="96x96" href="icon/favicon-96x96.png">
   <link rel="icon" type="image/png" sizes="16x16" href="icon/favicon-16x16.png">
   <link rel="manifest" href="manifest.webmanifest">
-  <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
+  <!-- <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
 <script>
   window.OneSignal = window.OneSignal || [];
   OneSignal.push(function() {
@@ -31,7 +31,7 @@
       appId: "26f60f84-24f8-4dcc-aaea-f8f1826768b2",
     });
   });
-</script>
+</script> -->
 </head>
 
 <body>
