--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
   <link rel="icon" type="image/png" sizes="96x96" href="icon/favicon-96x96.png">
   <link rel="icon" type="image/png" sizes="16x16" href="icon/favicon-16x16.png">
   <link rel="manifest" href="manifest.webmanifest">
-  <!-- <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
-<script>
-  window.OneSignal = window.OneSignal || [];
-  OneSignal.push(function() {
-    OneSignal.init({
-      appId: "26f60f84-24f8-4dcc-aaea-f8f1826768b2",
+  <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
+  <script>
+    window.OneSignal = window.OneSignal || [];
+    OneSignal.push(function () {
+      OneSignal.init({
+        appId: "26f60f84-24f8-4dcc-aaea-f8f1826768b2",
+      });
     });
-  });
-</script> -->
+  </script>
 </head>
 
 <body>
@@ -75,13 +75,13 @@
       <button id="btnAdd">Instalar</button>
     </div>
   </footer>
-  <script src="api.js"></script>
+  <script src="js/api.js"></script>
   <script>
     // Check that service workers are supported
     if ('serviceWorker' in navigator) {
       // Use the window load event to keep the page load performant
       window.addEventListener('load', () => {
-        navigator.serviceWorker.register('service-worker.js');
+        navigator.serviceWorker.register('js/service-worker.js');
       });
     }
   </script>
